chore: add gols ad

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="robots" content="index, follow">
-
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6199549323873133"
+	crossorigin="anonymous"></script>
 	<title>MoviesJoy – Watch high-quality movies and TV shows for free</title>
 	<meta name="description"
 		content="MoviesJoy – Watch high-definition films and series at no cost, no sign-ups required. Dive into limitless on-demand content immediately—no fees, no delays, just seamless entertainment whenever you want!">
