--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<meta name="robots" content="index, follow">
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6199549323873133"
 	crossorigin="anonymous"></script>
+	<meta name="google-adsense-account" content="ca-pub-6199549323873133">
 	<title>MoviesJoy – Watch high-quality movies and TV shows for free</title>
 	<meta name="description"
 		content="MoviesJoy – Watch high-definition films and series at no cost, no sign-ups required. Dive into limitless on-demand content immediately—no fees, no delays, just seamless entertainment whenever you want!">
