chore: multi ad

--- a/index.html
+++ b/index.html
@@ -240,6 +240,13 @@
 		<span class="filter-btn btn btn-sm">Filter</span>
 	</form>-->
 	<div style="height:20px;"></div>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- MoviesJoy Ad -->
+	<ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-6199549323873133" data-ad-slot="5130000001"
+		data-ad-format="auto" data-full-width-responsive="true"></ins>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
 	<main id="first">
 		<article>
 			<h1>MoviesJoy – Watch high-quality movies and TV shows for free</h1>
