chore: relink domain.online

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - MoviesJoy</title>
+    <script type="text/javascript">
+        var currentUrl = window.location.href;
+        var link = document.createElement('link');
+        link.rel = 'canonical';
+        link.href = currentUrl;
+
+        document.head.appendChild(link);
+    </script>
 </head>
 
 <body>
