--- a/Terms_and_Conditions.html
+++ b/Terms_and_Conditions.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - MoviesJoy</title>
+    <script type="text/javascript">
+        var currentUrl = window.location.href;
+        var link = document.createElement('link');
+        link.rel = 'canonical';
+        link.href = currentUrl;
+
+        document.head.appendChild(link);
+    </script>
 </head>
 <body>
     <main>
@@ -16,7 +24,7 @@
             everyone. Taking a few minutes to familiarize yourself with these rules will not only help maintain
             a positive environment but also allow us to focus on creating a more engaging and well-organized
             platform for all users. Your cooperation is key to making MoviesJoy a welcoming space for everyone.</p>
-            
+
             <h2><strong>Prohibited Activities on MoviesJoy</strong></h2>
             <p>The following actions are strictly forbidden on MoviesJoy:
             <ul>
