--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 	crossorigin="anonymous"></script>
 	<meta name="google-adsense-account" content="ca-pub-6199549323873133">
 	<title>MoviesJoy – Watch high-quality movies and TV shows for free</title>
+	<script type="text/javascript">
+		var currentUrl = window.location.href;
+		var link = document.createElement('link');
+		link.rel = 'canonical';
+		link.href = currentUrl;
+
+		document.head.appendChild(link);
+	</script>
 	<meta name="description"
 		content="MoviesJoy – Watch high-definition films and series at no cost, no sign-ups required. Dive into limitless on-demand content immediately—no fees, no delays, just seamless entertainment whenever you want!">
 	<meta name="keywords" content="Moviesjoy">
