chore: review Contact_Us.html

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -18,8 +18,7 @@
 <body>
     <main>
         <article>
-            <h1>Contact Us<br>Have questions? Our support team is her
-                e to help!</h1>
+            <h1>Contact Us<br>Have questions? Our support team is here to help!</h1>
             <h2><strong>How to Reach Us</strong></h2>
             <p>For any inquiries, feedback, or assistance, please feel free to contact us via email or the contact form
                 below.
