chore: add email

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -29,7 +29,7 @@
             <h2><strong>Email</strong></h2>
             <p>For general inquiries or feedback, please contact us at:<br>
                 Name: MoviesJoy<br>
-                Email: <a href="mailto:movesjoy2.online@gmail.com">movesjoy2.online@gmail.com</a><br>
+                Email: <a href="mailto:support@moviesjoy2.xyz">support@moviesjoy2.xyz</a><br>
                 Subject: General Inquiry</p>
             <h2><strong>Contact Form</strong></h2>
             <p>Please fill out the form below to submit your inquiry
